Fix user profile picture cropping

--- a/rsc/less/bootstrap-basic.less
+++ b/rsc/less/bootstrap-basic.less
@@ -291,6 +291,12 @@ form {
 .jcrop-keymgr {
 	visibility: hidden;
 }
+// Fix image cropping, because max-width:100% of main img style breaks this:
+#workarea, .preview_cropped_image {
+	img {
+		max-width: none;
+	}
+}
 // ---------------- //
 
 // Form styles:
